@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.402 2005/10/01 18:31:32 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.403 2005/10/01 21:19:25 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -9,6 +9,7 @@
   src/net/server/gliserv.py:
   allow for param to be passed multiple times in GET
   no XMLRPC functions return None
+  modify POST request parsing to only create a list if needed
   src/net/client/gliclient.py:
   various typo and type mismatch fixes
   exit after exception
